# annotatr

./: .env.release.example  .gitignore  CLAUDE.md  DRAWING_STATE_MANAGEMENT.md  FEATURE50_IMPLEMENTATION.md  FEATURE96_IMPLEMENTATION.md  FEATURES_56_57_58_IMPLEMENTATION.md  FEATURE_50_IMPLEMENTATION.md  INSTALLATION_BLOCKER.md  README.md  REGRESSION_TEST_58_59_60.md  REGRESSION_TEST_58_59_60_FIXED.md  SESSION12_COMPLETE.txt  SESSION13_COMPLETE.txt  SESSION17_COMPLETE.txt  SESSION18_COMPLETE.txt  SESSION19_COMPLETE.txt  SESSION21_COMPLETE.txt  SESSION22_COMPLETE.txt  SESSION23_COMPLETE.txt  SESSION24_COMPLETE.txt  SESSION25_COMPLETE.txt  SESSION26_COMPLETE.txt  SESSION27_COMPLETE.txt  SESSION29_COMPLETE.txt  SESSION30_COMPLETE.txt  SESSION7_SUMMARY.md  SESSION9_COMPLETE.txt  SESSION_SUMMARY.md  STORAGE_IMPLEMENTATION.md  VITE_CACHE_FIX.md  claude-progress-session28.txt  claude-progress-session30.txt  claude-progress-session31.txt  claude-progress-session32.txt  claude-progress.txt  console-errors.txt  create-icon.cjs  feature-132-alignment-guides-demo.html  index.html  (+77 more)
.autoforge/prompts/: .spec_status.json  app_spec.txt  initializer_prompt.md
.claude/: launch.json
.playwright-mcp/: annotatr-settings-2026-02-08.json
docs/: RELEASE.md  index.html  index.html.artifact.json
public/: test-drawing-functions.html
scripts/: merge-manifest.mjs  release-mac.sh  release-win.ps1
src/: App.tsx  mini-panel.tsx  overlay-entry.tsx  overlay-main.ts  overlay.tsx  panel-main.tsx  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  overlay.rs  platform_optimizations.rs  utils.rs
src/components/: MiniPanel.tsx  Overlay.tsx  Toolbar.tsx  UpdateBanner.tsx
src/hooks/: useUpdater.ts
src/lib/: drawing.ts  (+5 more)
updater/: latest.json
(+4 files in other folders)
